--- a/src/components/ui/navigation/Navigation.astro
+++ b/src/components/ui/navigation/Navigation.astro
@@ -36,7 +36,7 @@ const linkClasses = [
 	role="navigation"
 	aria-label="Main navigation"
 >
-	<ul class="flex lg:gap-6 xl:gap-8">
+	<ul class="flex lg:gap-4 xl:gap-8">
 		{
 			navLinks.map((link) => (
 				<li class="relative group flex items-center">
@@ -50,7 +50,7 @@ const linkClasses = [
 							>
 								{link.name}
 								<svg
-									class="w-4 h-4 transition-transform duration-200 group-hover:rotate-180"
+									class="w-4 h-4 transition-transform duration-200 group-hover:-rotate-90"
 									xmlns="http://www.w3.org/2000/svg"
 									viewBox="0 0 24 24"
 									fill="currentColor"
@@ -103,7 +103,7 @@ const linkClasses = [
 
 	/* Active page indicator */
 	a[aria-current='page'] {
-		color: rgb(var(--color-primary-500, 59 130 246)) !important;
+		color: var(--color-primary-500) !important;
 		font-weight: 600;
 	}
 
