--- a/src/components/sections/home/CoreServices.astro
+++ b/src/components/sections/home/CoreServices.astro
@@ -60,10 +60,10 @@ const {
 } = Astro.props as Props;
 ---
 
-<section class="">
+<section class="px-4 py-9">
 	<div class="content-container">
 		<!-- Section Header -->
-		<div class="text-center max-w-3xl mx-auto mb-16">
+		<div class="text-center max-w-3xl mx-auto mb-10 flex flex-col gap-3">
 			<h2
 				id="services-heading"
 				class="text-3xl sm:text-4xl lg:text-5xl font-bold text-gray-900 mb-4"
