--- a/src/components/ui/cards/ServiceCard.astro
+++ b/src/components/ui/cards/ServiceCard.astro
@@ -33,18 +33,21 @@ const styleConfig = {
 		title: 'text-primary-500',
 		description: 'text-white-300',
 		link: 'text-accent-300 hover:text-accent-700',
+		class: 'md:flex-row',
 	},
 	'2': {
 		background: 'bg-gray-200',
 		title: 'text-black-700',
 		description: 'text-black-500',
 		link: 'text-accent-700 hover:text-accent-300',
+		class: 'md:flex-row-reverse',
 	},
 	'3': {
 		background: 'bg-primary-500',
 		title: 'text-black-700',
 		description: 'text-black-500',
 		link: 'text-accent-700 hover:text-accent-300',
+		class: 'md:flex-row',
 	},
 };
 
@@ -53,8 +56,11 @@ const cardStyle = styleConfig[variation];
 
 <article
 	class:list={[
-		`${cardStyle.background}`,
+		`${cardStyle.background} ${cardStyle.class}`,
 		'px-4 py-6 flex flex-col gap-8',
+		'md:items-center md:px-8 md:py-10 md:max-h-[500px]',
+		'lg:min-h-[400px] lg:px-16 lg:gap-12',
+		'xl:px-20 xl:gap-20',
 		'rounded-2xl',
 	]}
 >
@@ -64,10 +70,16 @@ const cardStyle = styleConfig[variation];
 			alt={imageAlt}
 		/>
 	</div>
-	<div class:list={['content-wrapper', 'flex flex-col gap-6']}>
+	<div
+		class:list={[
+			'content-wrapper',
+			'flex flex-col gap-6',
+			'min-w-[40%] xl:min-w-[50%]',
+		]}
+	>
 		<div class="flex flex-col gap-3">
 			<h2
-				class={`heading-l3 ${cardStyle.title}`}
+				class={`heading-l2 ${cardStyle.title}`}
 				set:html={title}
 			/>
 			<p
