--- a/src/components/sections/home/ExtraServices.astro
+++ b/src/components/sections/home/ExtraServices.astro
@@ -65,13 +65,13 @@ const {
 } = Astro.props as Props;
 ---
 
-<section class="px-4 py-9">
-	<div class="content-container">
+<section class="px-4 py-9 bg-gray-100">
+	<div class="content-container flex flex-col gap-8 lg:gap-10">
 		<!-- Section Header -->
-		<div class="text-center max-w-3xl mx-auto mb-10 flex flex-col gap-3">
+		<div class="text-left md:text-center max-w-3xl mx-auto flex flex-col gap-3">
 			<h2
 				id="services-heading"
-				class="text-3xl sm:text-4xl lg:text-5xl font-bold text-gray-900 mb-4"
+				class="heading-l1"
 			>
 				{title}
 			</h2>
@@ -80,7 +80,7 @@ const {
 			</p>
 		</div>
 		<!-- Additional Services Grid -->
-		<div class="grid grid-cols-1 gap-8 lg:gap-12">
+		<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 lg:gap-10">
 			{
 				services.map((service) => (
 					<ExtraServiceCard
