add basic structure for cta component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Layout from '../layouts/Layout.astro';
 import Hero from '@/components/sections/home/Hero.astro';
 import CoreServices from '@/components/sections/home/CoreServices.astro';
 import ExtraServices from '@/components/sections/home/ExtraServices.astro';
+import CTA from '@/components/sections/shared/CTA.astro';
 ---
 
 <Layout
@@ -25,4 +26,5 @@ import ExtraServices from '@/components/sections/home/ExtraServices.astro';
 		title="Keep Jobs Moving and Leads Coming In"
 		subtitle="We build more than websites — we give you practical tools to save time, get more reviews, stay organized, and win more work without chasing it."
 	/>
+	<CTA />
 </Layout>
