--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,6 +48,8 @@ const {
 			<slot />
 		</main>
 
-		<Footer />
+		<Footer
+			footerText="Committed to providing businesses with innovative solutions that - Attract More Clients, Serve Them Better & Keep Them Longer."
+		/>
 	</body>
 </html>
