--- a/src/components/sections/shared/CTA.astro
+++ b/src/components/sections/shared/CTA.astro
@@ -2,23 +2,25 @@
 import Button from '@/components/ui/buttons/Button.astro';
 ---
 
-<section class="w-full lg:px-10">
-	<div
-		class="content-container !px-4 !py-9 flex flex-col gap-7 bg-primary-500 rounded-lg lg:!px-8 lg:!py-10"
-	>
-		<div class="flex flex-col gap-3">
-			<h2 class="heading-l2">Turn your website into a sales machine</h2>
-			<p class="wsl-text-lg">
-				We help construction pros land more jobs with smart websites,
-				automations, and local SEO.
-			</p>
+<section class="w-full lg:px-10 bg-gray-50">
+	<div class="content-container">
+		<div
+			class="content-wrapper px-4 py-9 flex flex-col gap-7 bg-primary-500 rounded-lg lg:px-8 lg:py-10"
+		>
+			<div class="flex flex-col gap-3">
+				<h2 class="heading-l2">Turn your website into a sales machine</h2>
+				<p class="wsl-text-lg">
+					We help construction pros land more jobs with smart websites,
+					automations, and local SEO.
+				</p>
+			</div>
+			<Button
+				text="Schedule a Call"
+				type="button"
+				variation="secondary"
+				href="/schedule-a-call"
+				class="w-fit"
+			/>
 		</div>
-		<Button
-			text="Schedule a Call"
-			type="button"
-			variation="secondary"
-			href="/schedule-a-call"
-			class="w-fit"
-		/>
 	</div>
 </section>
