--- a/src/components/ui/navigation/Footer.astro
+++ b/src/components/ui/navigation/Footer.astro
@@ -49,7 +49,7 @@ const { footerText } = Astro.props;
 <footer class="bg-gray-800 pb-2">
 	<div
 		class:list={[
-			'max-w-[var(--content-width-max)] mx-auto flex flex-col gap-8 pt-9 px-4',
+			'max-w-[var(--content-width-xl)] mx-auto flex flex-col gap-8 pt-9 px-4',
 			'sm:pt-12 sm:px-10 sm:gap-10',
 		]}
 	>
@@ -66,26 +66,18 @@ const { footerText } = Astro.props;
 
 		<!-- Middle Content -->
 		<div class="middle-content">
-			<!-- Footer Text (always full width on mobile) -->
-			<div
-				class="text-gray-300 mb-8 sm:mb-10 lg:mb-0 lg:hidden"
-				set:html={footerText}
-			/>
-
-			<!-- Navigation & Company Info Container -->
-			<div class="lg:grid lg:grid-cols-3 lg:gap-10 lg:items-start">
-				<!-- Footer Text (desktop position) -->
+			<!-- Main Grid Container -->
+			<div class="lg:grid lg:grid-cols-[2fr_1fr] lg:gap-12 lg:items-start">
+				<!-- Footer Text -->
 				<div
-					class="hidden lg:block text-gray-300"
+					class="text-gray-300 mb-8 sm:mb-10 lg:mb-0"
 					set:html={footerText}
 				/>
 
-				<!-- Navigation & Company (mobile/tablet: stacked, desktop: side by side) -->
-				<div
-					class="flex flex-col gap-8 sm:flex-row sm:gap-16 lg:col-span-2 lg:gap-10"
-				>
+				<!-- Navigation & Company Info Container -->
+				<div class="flex flex-col gap-8 sm:flex-row sm:gap-16 lg:gap-8">
 					<!-- Navigation Links -->
-					<div class="footerLinks flex flex-col gap-4 flex-1 lg:items-center">
+					<div class="footerLinks flex flex-col gap-4 flex-1">
 						<h4 class="text-lg uppercase text-primary-600 whitespace-nowrap">
 							Quick Links
 						</h4>
