--- a/src/components/sections/shared/CTA.astro
+++ b/src/components/sections/shared/CTA.astro
@@ -1,26 +1,44 @@
 ---
+import { Image } from 'astro:assets';
+import CTARocket from '@/assets/cta-rocket.png';
+
 import Button from '@/components/ui/buttons/Button.astro';
 ---
 
 <section class="w-full lg:px-10 bg-gray-50">
 	<div class="content-container">
 		<div
-			class="content-wrapper px-4 py-9 flex flex-col gap-7 bg-primary-500 rounded-lg lg:px-8 lg:py-10"
+			class="content-wrapper px-10 py-10 bg-primary-500 rounded-lg md:px-10 lg:px-8 lg:py-12 2xl:px-20 2xl:py-[60px] relative overflow-hidden min-h-[280px] lg:min-h-[320px]"
 		>
-			<div class="flex flex-col gap-3">
-				<h2 class="heading-l2">Turn your website into a sales machine</h2>
-				<p class="wsl-text-lg">
-					We help construction pros land more jobs with smart websites,
-					automations, and local SEO.
-				</p>
+			<div
+				class="flex flex-col lg:flex-row lg:items-center lg:justify-between h-full"
+			>
+				<div class="left lg:flex-1 md:max-w-[70%] xl:max-w-[55%] z-10 relative">
+					<div class="flex flex-col gap-3 mb-6">
+						<h2 class="heading-l2">Turn your website into a sales machine</h2>
+						<p class="wsl-text-lg">
+							We help construction pros land more jobs with smart websites,
+							automations, and local SEO.s
+						</p>
+					</div>
+					<Button
+						text="Schedule a Call"
+						type="button"
+						variation="secondary"
+						href="/schedule-a-call"
+						class="w-fit"
+					/>
+				</div>
+				<div
+					class="right hidden md:block absolute bottom-0 right-0 translate-x-[10%] w-[50%] xl:w-[50%] xl:translate-x-0 xl:translate-y-10"
+				>
+					<Image
+						src={CTARocket}
+						alt="CTA Rocket Image"
+						class="w-full h-auto object-bottom block"
+					/>
+				</div>
 			</div>
-			<Button
-				text="Schedule a Call"
-				type="button"
-				variation="secondary"
-				href="/schedule-a-call"
-				class="w-fit"
-			/>
 		</div>
 	</div>
 </section>
