--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -93,6 +93,7 @@
 	--breakpoint-md: 768px;
 	--breakpoint-lg: 1024px;
 	--breakpoint-xl: 1200px;
+	--breakpoint-2xl: 1300px;
 
 	/* Content width constraints */
 	--content-width-sm: 40rem; /* 640px */
