--- a/src/components/sections/shared/CTA.astro
+++ b/src/components/sections/shared/CTA.astro
@@ -15,7 +15,9 @@ import Button from '@/components/ui/buttons/Button.astro';
 			>
 				<div class="left lg:flex-1 md:max-w-[70%] xl:max-w-[55%] z-10 relative">
 					<div class="flex flex-col gap-3 mb-6">
-						<h2 class="heading-l2">Turn your website into a sales machine</h2>
+						<h2 class="heading-l2 capitalize">
+							Turn your website into a sales machine
+						</h2>
 						<p class="wsl-text-lg">
 							We help construction pros land more jobs with smart websites,
 							automations, and local SEO.s
