--- a/src/components/ui/navigation/Footer.astro
+++ b/src/components/ui/navigation/Footer.astro
@@ -46,7 +46,7 @@ const companyInfo = [
 const { footerText } = Astro.props;
 ---
 
-<footer class="bg-gray-800 pb-2">
+<footer class="bg-gray-700 pb-2 lg:pt-10">
 	<div
 		class:list={[
 			'max-w-[var(--content-width-xl)] mx-auto flex flex-col gap-8 pt-9 px-4',
@@ -56,7 +56,7 @@ const { footerText } = Astro.props;
 		<!-- Logo -->
 		<div class="logo">
 			<Logo
-				size="lg"
+				size="xl"
 				href="/"
 				context="header"
 				priority={true}
@@ -70,7 +70,7 @@ const { footerText } = Astro.props;
 			<div class="lg:grid lg:grid-cols-[2fr_1fr] lg:gap-12 lg:items-start">
 				<!-- Footer Text -->
 				<div
-					class="text-gray-300 mb-8 sm:mb-10 lg:mb-0"
+					class="wsl-text-sm max-w-[550px] text-gray-300 mb-8 sm:mb-10 lg:mb-0"
 					set:html={footerText}
 				/>
 
