increase gap in footer links

--- a/src/components/ui/navigation/Footer.astro
+++ b/src/components/ui/navigation/Footer.astro
@@ -75,7 +75,7 @@ const { footerText } = Astro.props;
 				/>
 
 				<!-- Navigation & Company Info Container -->
-				<div class="flex flex-col gap-8 sm:flex-row sm:gap-16 lg:gap-8">
+				<div class="flex flex-col gap-8 sm:flex-row sm:gap-16">
 					<!-- Navigation Links -->
 					<div class="footerLinks flex flex-col gap-4 flex-1">
 						<h4 class="text-lg uppercase text-primary-600 whitespace-nowrap">
